--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ a {
   color: #fff;
   font-size: 18px;
   position: relative;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
 }
 .header-menu a:after {
   content: "";
