--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding-bottom: 600px;
 }
 ul {
   margin: 0px;
@@ -8,9 +9,23 @@ ul {
 }
 a {
   text-decoration: none;
+  color: inherit;
 }
-.header-bg {
+h1,
+h2 p {
+  margin: 0;
+  padding: 0;
+}
+img {
+  max-width: 100%;
+  display: block;
+}
+.header-bg,
+.introducao-bg {
   background: #000;
+}
+.introducao-bg {
+  box-shadow: inset 0 -120px white;
 }
 .header {
   box-sizing: border-box;
@@ -75,4 +90,60 @@ a {
     padding: 8px 12px;
     font-size: 14px;
   }
+}
+.introducao {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  color: #fff;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introducao h1 {
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 64px;
+  line-height: 1.125;
+  margin-bottom: 32px;
+}
+.introducao h1 span {
+  color: #5fdb1f;
+}
+.introducao p {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+  margin-bottom: 20px;
+}
+.introducao a {
+  display: inline-block;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.33;
+  padding: 16px 32px;
+  background: linear-gradient(#5fdb1f, #62c230);
+  color: #181e15;
+  text-transform: uppercase;
+  border-radius: 4px;
+  box-shadow: 0px 1px 2px 0px #0000001a;
+}
+.introducao a:hover {
+  background: linear-gradient(#54cc16, #369504);
+}
+.introducao-conteudo {
+  align-self: end;
+  padding-bottom: 200px;
+}
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
