--- a/css/style.css
+++ b/css/style.css
@@ -1,149 +1,10 @@
-body {
-  margin: 0;
-  padding-bottom: 600px;
-}
-ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
-a {
-  text-decoration: none;
-  color: inherit;
-}
-h1,
-h2 p {
-  margin: 0;
-  padding: 0;
-}
-img {
-  max-width: 100%;
-  display: block;
-}
-.header-bg,
-.introducao-bg {
-  background: #000;
-}
-.introducao-bg {
-  box-shadow: inset 0 -120px white;
-}
-.header {
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 18px;
-  max-width: 1160px;
-  margin-left: auto;
-  margin-right: auto;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-.header-menu {
-  display: flex;
-  gap: 40px;
-  flex-wrap: wrap;
-}
-.header-menu a {
-  display: inline-block;
-  padding: 16px 0;
-  color: #fff;
-  font-size: 18px;
-  position: relative;
-  font-family: "Poppins", sans-serif;
-  font-weight: 500;
-}
-.header-menu a:after {
-  content: "";
-  display: block;
-  height: 2px;
-  width: 0px;
-  background: #fff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-.header-menu a:hover:after {
-  width: 100%;
-}
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
-  .header-menu a {
-    padding: 12px 16px;
-    background: #111;
-    border-radius: 4px;
-  }
-  .header-menu a:hover {
-    background: #2e2e2e;
-  }
-  .header-menu a:after {
-    display: none;
-  }
-}
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
-.introducao {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 40px;
-  color: #fff;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
+@import "./global/global.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
+@import "./global/header.css";
 
-.introducao h1 {
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 64px;
-  line-height: 1.125;
-  margin-bottom: 32px;
-}
-.introducao h1 span {
-  color: #5fdb1f;
-}
-.introducao p {
-  font-family: Roboto, Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  margin-bottom: 20px;
-}
-.introducao a {
-  display: inline-block;
-  font-family: Poppins, Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.33;
-  padding: 16px 32px;
-  background: linear-gradient(#5fdb1f, #62c230);
-  color: #181e15;
-  text-transform: uppercase;
-  border-radius: 4px;
-  box-shadow: 0px 1px 2px 0px #0000001a;
-}
-.introducao a:hover {
-  background: linear-gradient(#54cc16, #369504);
-}
-.introducao-conteudo {
-  align-self: end;
-  padding-bottom: 200px;
-}
-.introducao img {
-  height: 100%;
-  object-fit: cover;
-  border-radius: 4px;
-}
+/* Utilidades */
+@import "./utilidades/componentes.css";
+
+/* Home */
+@import "./global/home/introducao.css";
