--- a/css/global/header.css
+++ b/css/global/header.css
@@ -2,16 +2,13 @@
   background: var(--cor-12);
 }
 .header {
-  box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 18px;
-  max-width: 1160px;
-  margin-left: auto;
-  margin-right: auto;
   flex-wrap: wrap;
   gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .header-menu {
   display: flex;
