--- a/css/global/home/introducao.css
+++ b/css/global/home/introducao.css
@@ -9,12 +9,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .introducao h1 {
@@ -51,7 +45,7 @@
     width: 100%;
   }
   .introducao-bg {
-    background: var(--cor-12);
+    background-color: var(--cor-11);
     padding-top: 40px;
     box-shadow: inset 0 -60px var(--cor-0);
   }
