--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,11 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .botao {
   display: inline-block;
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
