--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,10 @@
 @import "./utilidades/componentes.css";
 
 /* Home */
-@import "./global/home/introducao.css";
+@import "./home/introducao.css";
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+
+/* Tecnologia */
+@import "./home/tecnologia.css";
