--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -15,6 +15,14 @@
   text-transform: uppercase;
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px #0000001a;
+  max-width: max-content;
+}
+.botao.secundario {
+  background: var(--cor-10);
+  color: var(--cor-2);
+}
+.botao.secundario:hover {
+  background: var(--cor-9);
 }
 .botao:hover {
   background: linear-gradient(#54cc16, #369504);
