--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css ";
 
 /* Tecnologia */
 @import "./home/tecnologia.css";
@@ -25,5 +26,5 @@
 /* Seguros */
 @import "./seguros/seguros.css";
 
-/* Seguros */
+/* Termos */
 @import "./termos/termos.css ";
