--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -24,6 +24,22 @@
 .botao.secundario:hover {
   background: var(--cor-9);
 }
+.botao.seta {
+  display: flex;
+  align-items: center;
+}
+.botao.seta:hover::after {
+  transform: translateX(4px);
+}
+.botao.seta::after {
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 10px;
+  margin-left: 12px;
+  background: url(../../img/icones/seta.svg);
+  transition: transform 0.2s;
+}
 .botao:hover {
   background: linear-gradient(#54cc16, #369504);
 }
