--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
 @import "./bicicletas/bicicletas.css ";
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /* Tecnologia */
 @import "./home/tecnologia.css";
