--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 /* Utilidades */
 @import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -32,3 +33,7 @@
 
 /* Termos */
 @import "./termos/termos.css ";
+
+/* Contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
