--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -16,6 +16,8 @@
   border-radius: 4px;
   box-shadow: 0px 1px 2px 0px #0000001a;
   max-width: max-content;
+  border: none;
+  cursor: pointer;
 }
 .botao.secundario {
   background: var(--cor-10);
