--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,6 @@
 /* Contato */
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+
+/* Orçamento */
+@import "./orcamento/orcamento.css";
