decoracoes svg nas paginas

--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -77,6 +77,10 @@
   padding-top: 60px;
   padding-bottom: 60px;
 }
+.titulo {
+  background: url(../../img/dec/top-right-p.svg) no-repeat top 50px right 20px;
+}
+
 .titulo p {
   margin-bottom: 4px;
 }
