--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -13,9 +13,12 @@
 .contato-dados {
   background: var(--cor-12);
   border-radius: 5px 0 0 5px;
+  background: var(--cor-12) url(../../img/dec/bottom-left-p.svg) no-repeat
+    bottom 20px left 20px;
 }
 .contato-formulario {
-  background: var(--cor-0);
+  background: var(--cor-0) url(../../img/dec/bottom-right-p.svg) no-repeat
+    bottom 20px right 20px;
   border-radius: 0px 5px 5px 0;
 }
 .contato-dados h2 {
@@ -63,6 +66,7 @@
   }
   .contato-dados {
     border-radius: 5px 5px 0 0;
+    background: var(--cor-12);
   }
   .contato-formulario {
     border-radius: 0px 0px 5px 5px;
