--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -5,12 +5,16 @@
 .perguntas h2 {
   margin-bottom: 60px;
 }
-.perguntas dt {
+.perguntas button {
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
 }
 .perguntas dl > div {
   padding: 20px;
@@ -19,14 +23,14 @@
 .perguntas dl > div:nth-child(odd) {
   background-color: var(--cor-1);
 }
-.perguntas dt::before {
+.perguntas button::before {
   content: "";
   display: inline-block;
   width: 12px;
   height: 8px;
   background-color: var(--cor-p1);
 }
-.perguntas dt::after {
+.perguntas button::after {
   content: "";
   display: inline-block;
   width: 14px;
@@ -34,9 +38,17 @@
   background: url(../../img/icones/seta-abrir.svg);
   transition: 0.3s;
 }
-.perguntas dt:hover::after {
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after {
   transform: rotate(180deg);
 }
+.perguntas dd {
+  display: none;
+}
+.perguntas dd.ativa {
+  display: block;
+}
+
 .perguntas dd {
   padding-left: 20px;
   padding-top: 16px;
